# actix-realworld-example

./: .gitignore  Cargo.toml  README.md  application.yaml  realworld.pem  realworld.pub  realworld_ed25519  realworld_ed25519.pub
src/: lib.rs  main.rs
src/config/: application.rs  database.rs  log.rs  mod.rs  router.rs
src/controller/: auth.rs  mod.rs  profile.rs  user.rs
src/middleware/: auth.rs  error.rs  mod.rs
src/model/: mod.rs  user.rs
src/service/: auth.rs  mod.rs  user.rs
src/util/: error.rs  mod.rs  utils.rs
